# packages/orchestrator/pkg/server/sandboxes.go
@@ -325,10 +325,12 @@ func createVolumeMountModelsFromAPI(volumeMounts []*orchestrator.SandboxVolumeMo
 		}
 
 		results = append(results, sandbox.VolumeMountConfig{
-			ID:   volumeID,
-			Name: v.GetName(),
-			Path: v.GetPath(),
-			Type: v.GetType(),
+			ID:       volumeID,
+			Name:     v.GetName(),
+			Path:     v.GetPath(),
+			Type:     v.GetType(),
+			Source:   v.GetSource(),
+			ReadOnly: v.GetReadOnly(),
 		})
 	}
 
